<resources>
    <string name="app_name">onlineNumBaseball</string>
    <string name="toRanking">순위보기</string>
    <string name="toSetting">설정하기</string>
    <string name="toSingle">혼자하기</string>
    <string name="toMulti">같이하기</string>
    <string name="guideText">혼자하기: 공 개수를 선택해주세요\n같이하기: 로그인이 필요합니다</string>
    <string name="toPlay">게임시작</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="blank"> </string>
    <string name="reds">reds</string>
    <string name="greens">greens</string>
    <string name="blues">blues</string>
    <string name="others">others</string>
    <string name="yellows">yellows</string>
    <string name="cyans">cyans</string>
    <string name="magentas">magentas</string>
    <string name="bgTextGuide">꺼짐: 배경 색 변경\n켜짐: 글자 색 변경</string>
    <string name="nickname">닉네임</string>
    <string name="logout">로그아웃</string>
    <string name="revoke">탈퇴하기</string>
    <string name="background">배경</string>
    <string name="confirm">적용하기</string>
    <string name="cancel">취소하기</string>
    <string name="initialize">초기화</string>
    <string name="basic">기본</string>
    <string name="round">둥글게</string>
    <string name="rround">더 둥글게</string>
    <string name="_3b_rank">3B Rank</string>
    <string name="_4b_rank">4B Rank</string>
    <string name="_5b_rank">5B Rank</string>
    <string name="nballrank">nBallRank</string>
    <string name="my_information">My Information</string>
    <string name="username">username</string>
    <string name="mean_time">평균 클리어 시간</string>
    <string name="mean_turn">평균 클리어 턴 수</string>
    <string name="turn">Turn : 1</string>
    <string name="clear">Clear</string>
    <string name="memo">메모</string>
    <string name="confirm_short">확인</string>
    <string name="cancel_short">취소</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="btn1guide">게임 - 선택 숫자\n랭킹 - 3B</string>
    <string name="btn2guide">게임 - 숫자 버튼\n랭킹 - 4B</string>
    <string name="btn3guide">게임 - 확인 버튼\n랭킹 - 5B</string>
    <string name="btn4guide">게임 - 취소 버튼\n게임방 - 준비하기, 시작하기</string>
    <string name="btn5guide">게임 - 메모 버튼\n게임방 - 게임설정</string>
    <string name="game_info">방금 플레이한 게임의 정보</string>
    <string name="clear_time">클리어 시간 :</string>
    <string name="clear_turn">클리어 턴 수 :</string>
    <string name="db_info">DB에 기록된 정보</string>
    <string name="mean_time_">평균 클리어 시간 :</string>
    <string name="mean_turn_">평균 클리어 턴 수 :</string>
    <string name="loading">Loading&#8230;</string>
    <string name="guess">0 1 2 3 4 5 6 7 8 9</string>
    <string name="back">되돌리기</string>
    <string name="room_name">방 이름</string>
    <string name="apply">적용</string>
    <string name="b5">5개</string>
    <string name="b4">4개</string>
    <string name="b3">3개</string>
    <string name="ball_number">공 개수</string>
    <string name="gameinfo_text">게임 정보</string>
    <string name="owner">방장</string>
    <string name="name">이름</string>
    <string name="game_his">게임 전적</string>
    <string name="ready_state">준비 상태</string>
    <string name="ready">준비하기</string>
    <string name="start">시작하기</string>
    <string name="game_set">게임설정</string>
    <string name="list">대기방 LIST</string>
    <string name="room_make">방 만들기</string>
    <string name="quick">빠른 시작</string>
    <string name="make">만들기</string>
    <string name="find">찾기</string>
    <string name="condition">조건</string>
</resources>