<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/id_info"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/blank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/nickname"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile" />
    </LinearLayout>

    <TextView
        android:id="@+id/guide"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/guideText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="127dp" />

    <RadioGroup
        android:id="@+id/ball_count"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="227dp">

        <RadioButton
            android:id="@+id/three_ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="272dp" />

        <RadioButton
            android:id="@+id/four_ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="272dp" />

        <RadioButton
            android:id="@+id/five_ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="272dp" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/plays"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/single_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:enabled="false"
            android:text="@string/toSingle"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="#CDDC39" />

        <Button
            android:id="@+id/multi_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:enabled="false"
            android:text="@string/toMulti"
            android:textSize="18sp"
            app:backgroundTint="#8BC34A" />

        <Button
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:enabled="false"
            android:text="@string/toPlay"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="#FFEB3B" />
    </FrameLayout>

    <Button
        android:id="@+id/rank_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/toRanking"
        android:textSize="18sp"
        app:backgroundTint="#00BCD4" />

    <Button
        android:id="@+id/set_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/toSetting"
        android:textSize="18sp"
        app:backgroundTint="#03A9F4"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="467dp" />

    <FrameLayout
        android:id="@+id/login_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible">

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/logout"
                style="?android:attr/buttonBarButtonStyle"
                app:backgroundTint="#3F51B5" />

            <Button
                android:id="@+id/revoke_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/revoke"
                style="?android:attr/buttonBarButtonStyle"
                app:backgroundTint="#673AB7" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_signin_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </FrameLayout>

</LinearLayout>