<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MultiRoom">

    <LinearLayout
        android:id="@+id/room_info"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/game_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameinfo_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/room_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/user1_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/user1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user1_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_his"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ready_state1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready_state"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/user2_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_his"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ready_state2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready_state"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/user2_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/owner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="visible">

            <Button
                android:id="@+id/start_btn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/start" />

            <Button
                android:id="@+id/game_set"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/game_set" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="invisible">

            <Button
                android:id="@+id/ready_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>